--- a/index.html
+++ b/index.html
@@ -1,4 +1,57 @@
 <!DOCTYPE html>
+<link rel="stylesheet" type="text/css" href="index.css" media="screen"/>
 <html>
-    <p>asd</p>
+    <head>
+        <title>Google</title>
+    </head>
+    <body>
+        <nav id="nav">
+            <div class="ue1">
+                <a href="#" target="_blank">Gmail</a>
+                <a href="#" target="_blank">Images</a>
+            </div>
+            <a href="#" target="_blank" id="test">
+                <svg viewBox="0 0 23 23" id="dropdown">
+                    <path d="M6,8c1.1,0 2,-0.9 2,-2s-0.9,
+                    -2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,20c1.1,
+                    0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,
+                    2 2,2zM6,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,
+                    -2 -2,0.9 -2,2 0.9,2 2,2zM6,14c1.1,0 2,
+                    -0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,
+                    2zM12,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,
+                    0.9 -2,2 0.9,2 2,2zM16,6c0,1.1 0.9,2 2,2s2,
+                    -0.9 2,-2 -0.9,-2 -2,-2 -2,0.9 -2,2zM12,8c1.1,
+                    0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,
+                    2 2,2zM18,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,
+                    -2 -2,0.9 -2,2 0.9,2 2,2zM18,20c1.1,0 2,-0.9 2,
+                    -2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2z"></path>
+                </svg>
+            </a>
+            <a href="#" target="_blank" id="profile-border">
+                <img  id="profile" src="https://lh3.googleusercontent.com/ogw/ADGmqu_bh2hwtG_U_J_MfdmxZyRuq1zFTDG6fUzzbzUv=s32-c-mo" alt="profile"/>
+            </a>
+        </nav>
+        <main>
+            <div id="container">
+                <img id="google-logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="google logo"/>
+                <div>
+                    <form id="input-form">
+                    <svg viewBox="0 0 24 24" id="magnifier">
+                        <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
+                    </svg>
+                    <input type="text">
+                </div>
+                <div>
+                    <a href="#" target="_blank">Google Search</a>
+                    <a href="#" target="_blank">I'm Feeling Lucky</a>
+                </div>
+                <div>
+                    <p>Google Offered in : </p>
+                    <a href="#" target="_blank">Lorem</a>
+                    <a href="#" target="_blank">Ipsum</a>
+                </div>
+                
+            </div>
+        </main>
+    </body>
 </html>
