--- a/index.html
+++ b/index.html
@@ -41,17 +41,26 @@
                     </svg>
                     <input type="text">
                 </div>
-                <div>
-                    <a href="#" target="_blank">Google Search</a>
-                    <a href="#" target="_blank">I'm Feeling Lucky</a>
+                <div id="container2">
+                    <a href="#" target="_blank" class="a1">Google Search</a>
+                    <a href="#" target="_blank" class="a1">I'm Feeling Lucky</a>
                 </div>
-                <div>
+                <div id="container3">
                     <p>Google Offered in : </p>
-                    <a href="#" target="_blank">Lorem</a>
-                    <a href="#" target="_blank">Ipsum</a>
+                    <a href="#" target="_blank" class="a2">Lorem</a>
+                    <a href="#" target="_blank" class="a2">Ipsum</a>
                 </div>
-                
             </div>
         </main>
+        <footer>
+            <p id="location">Lorem</p>
+            <hr id="footer-line">
+            <div id="container4">
+                <a href="#" target="_blank" class="afooter">About</a>
+                <a href="#" target="_blank" class="afooter">Advertising</a>
+                <a href="#" target="_blank" class="afooter">Business</a>
+                <a href="#" target="_blank" class="afooter">How Search Works</a>
+            </div>
+        </footer>
     </body>
 </html>
